--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="Diagramas"/>
-	<classpathentry kind="src" path="SOOS"/>
+	<classpathentry kind="src" path="Soos"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
