--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EasyAccept"/>
+	<classpathentry kind="lib" path="Testes/test/soos/Main.java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
