--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/EasyAccept"/>
-	<classpathentry kind="lib" path="/Users/dantaselton/OneDrive/workspace/easyaccept.jar"/>
+	<classpathentry kind="lib" path="resources/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
