Testes de unidade OK

--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="Testes/test"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.USER_LIBRARY/EasyAccept"/>
-	<classpathentry kind="lib" path="resources/easyaccept.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EasyAccept"/>
+	<classpathentry exported="true" kind="lib" path="resources/easyaccept.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
